--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <head>
 
-<meta charset=“UTF-8">
+<meta charset=“UTF-8“>
 
-<title> Untitled Document </title>
+<title> MA IID UX </title>
 
 <link rel="stylesheet" href="yourname.css">
 
 <style>
-( Define your element style information for the current HTML document )
 </style>
 
 </head>
